# briefly

./: .briefly-settings.json  .env.example  .gitignore  CLAUDE.md  DELIVERY_CHANNELS_RESEARCH.md  README.md  docker-compose.yml  pyproject.toml
docs/: CLOUD_AGENT_PROMPT.md  DATABASE_SETUP.md  DEVELOPMENT_WORKFLOW.md  PRD-atomic-briefings.md  PRD-dashboard-job-persistence.md  PRD-n8n-extraction.md  PRD-n8n-job-persistence.md  PRD-phase1-pgvector.md  PRD-phase1-testing.md  PRD-phase2-media-sources.md  PRD-rich-ui.md  PRD-search-and-prompting.md  PRD-simplified-briefings.md  PRD-transcript-memory.md  PRD-x-lists.md  STATUS.md
infrastructure/docker/: .env.example  docker-compose.yml
n8n-workflows/: README.md
n8n-workflows/adapters/: adapter-podcast.json  adapter-x.json  adapter-youtube.json
n8n-workflows/orchestrator/: orchestrator-briefing-ondemand.json
n8n-workflows/sub/: sub-progress-report.json
scripts/: test_briefing.py
src/briefly/: __init__.py
src/briefly/adapters/: __init__.py  base.py  gemini.py  grok.py  podcast.py  podcast_search.py  x.py  youtube.py
src/briefly/api/: main.py
src/briefly/api/routes/: briefings.py  categories.py  health.py  (+7 more)
src/briefly/core/: cache.py  config.py  database.py
src/briefly/migrations/: 001_pgvector_schema.sql
src/briefly/models/: __init__.py  briefing.py  source.py  user.py
src/briefly/services/: __init__.py  curation.py  embeddings.py  jobs.py  simple_curation.py  summarization.py  transcription.py  transcripts.py  vectorstore.py  x_lists.py
tests/: __init__.py  test_jobs.py  test_jobs_integration.py
(+1 files in other folders)
